# vzlet_ur3e

./: .gitignore  create_udev.sh  ctl.sh  hint.md  hint.txt  readme.md  switch_controllers.sh
config/: DEFAULT_RMW_ZENOH_ROUTER_CONFIG.json5  DEFAULT_RMW_ZENOH_SESSION_CONFIG.json5  RVIZ_RMW_ZENOH_SESSION_CONFIG.json5  ur3e_calibration.yaml
docker/: Dockerfile-main  Dockerfile-rviz  rviz.compose.yaml  ur3e.compose.yaml
gripper/: check_ports.py  pose_control.py  read_pose.py  readme.md  set_mid.py
helper/: grid_creation.py  grid_poses.csv  yolo_debug_preview.py
low-level-pneumo/: readme.md
low-level-pneumo/blink_control/: blink_control.ino
low-level-pneumo/uart_control/: uart_control.ino
scripts/: exit_protective.sh  restart.sh  restart_controllers.sh  rviz.sh
ur_rtde_scripts/: change_port.py  receive_pose.py  receive_tool_pose.py  record_pose.py  recorded_joints.csv  recorded_poses.csv  req.txt
ur_trde_scripts/: control_test.py  readme.md
ws/: recorded_poses_floor.csv  zone_poses_floor.csv
ws/src/Universal_Robots_ROS2_Driver/ur_moveit_config/config/: joint_limits.yaml  joint_limits_igor.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ur_servo.yaml
ws/src/Universal_Robots_ROS2_Driver/ur_robot_driver/: CMakeLists.txt
ws/src/feetech_ros2_driver/src/: feetech_ros2_driver.cpp
ws/src/suction_gripper_hardware/: CMakeLists.txt  package.xml  suction_gripper_hardware.xml
ws/src/suction_gripper_hardware/config/: suction_gripper_controller.yaml
ws/src/suction_gripper_hardware/include/suction_gripper_hardware/: suction_gripper_system.hpp
ws/src/suction_gripper_hardware/src/: suction_gripper_system.cpp
ws/src/vzlet_control/: CMakeLists.txt  package.xml
ws/src/vzlet_control/config/: params.yaml
ws/src/vzlet_control/launch/: main.launch.py  ur3e.launch.py  ur_control.launch.py  ur_dashboard_client.launch.py  ur_moveit.launch.py  ur_rsp.launch.py
ws/src/vzlet_control/scripts/: base_node.py  photo_recorder.py  pipeline.py  pipeline_motion.py  pipeline_types.py  pipeline_utils.py  pipeline_vision.py  recorder.py  teleop.py
(+16 files in other folders)
