<?xml version="1.0"?>
<package format="3">
  <name>suction_gripper_hardware</name>
  <version>0.0.1</version>
  <description>ros2_control UART hardware interface for a suction gripper.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>